# VVVVVV

./: .gitattributes  .gitignore  .gitmodules  FEATURES.md  README.md
.github/resources/: Info.plist  VVVVVV-CE  v6cord.icns  vce.icns
.github/workflows/: ci-android.yml  ci.yml
desktop_version/: .dockerignore  .gitignore  3ds-sdl2-config.sh  CMakeLists.txt  CONTRIBUTORS.txt  Dockerfile.3ds  Dockerfile.switch  Makefile.switch  README.md  android-build.sh  android-toolchain.cmake  build.sh  cpack.sh  debug.sh  download-data.sh  font.txt  pinned-cmake.sh  resources.rc  run.sh  shell.nix  tests.sh  testtemplate.vvvvvv  toolchain.cmake  windres.patch  wine-gdb.sh
desktop_version/android-project/: .gitignore  local.properties
desktop_version/android-project/app/: build.gradle
desktop_version/android-project/app/jni/: CMakeLists.txt  SDL
desktop_version/android-project/app/src/main/: AndroidManifest.xml
desktop_version/android-project/app/src/main/java/io/github/v6cord/vvvvvvce/: VCEActivity.java
desktop_version/android-project/app/src/main/res/values/: strings.xml
desktop_version/android/android-app/src/main/: AndroidManifest.xml
desktop_version/cmake/: DownloadAudioCodecs.cmake  FindSDLMixerX.cmake  version.cmake
desktop_version/data/: VVVVVV-CE.desktop
desktop_version/data/graphics/: font.txt
desktop_version/src/: .FileSystemUtils.cpp.kate-swp  BinaryBlob.cpp  BinaryBlob.h  BlockV.h  Ent.h  Entity.cpp  Entity.h  Enums.h  FileSystemUtils.cpp  FileSystemUtils.h  Finalclass.cpp  Finalclass.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  GraphicsResources.cpp  GraphicsResources.h  GraphicsUtil.cpp  GraphicsUtil.h  GrowingVector.h  Input.cpp  Input.h  KeyPoll.cpp  KeyPoll.h  Labclass.cpp  Labclass.h  Logic.cpp  LuaScript.cpp  LuaScript.h  Map.cpp  Map.h  Maths.h  Music.cpp  Music.h  Network.c  Network.h  Otherlevel.cpp  Otherlevel.h  Render.cpp  (+35 more)
desktop_version/tests/Documents/: VVVVVV
desktop_version/tests/VVVVVV/levels/: createcrewman_numcolor.vvvvvv  getpixel.vvvvvv  levelgfx.vvvvvv
desktop_version/tests/VVVVVV/saves/: levelstats.vvv  unlock.vvv
desktop_version/utfcpp/source/utf8/: checked.h
